--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.11.1",
+    "eslint": "^9.11.1",
+    "globals": "^15.9.0",
+    "prettier": "3.3.3",
     "vite": "^5.4.8"
   },
   "dependencies": {
